--- a/index2.html
+++ b/index2.html
@@ -3,16 +3,16 @@
 <head>
     <title>JUDUL HALAMAN</title>
 </head>
-<body> bgcolor="blue"
-    <h1>HEADER</h1>
-    <p>ini adalah link
+<body bgcolor="pink">
+    <h1>SATWA LIAR</h1>
+        <p>JENIS SATWA LIAR
         <a href="demo.html"></a>
     </p>
     
     <ol type="a">
-        <li>ALIEN kodok</li>
-        <li>MERAK</li>
-        <li>KOMODO</li>
+        <li>ARENTA </li>
+        <li>ERISA</li>
+        <li>NOVAL</li>
     </ol>
 </body>    
 </html>
