--- a/latihan_1_2.html
+++ b/latihan_1_2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE htmls
 <head>
 <title>Halaman HTML saya</title>
-<link rel="icon" type="img/png" href="html_dasar/gambar/gambar1.jpg" sizes="16x16" />
+<link rel="icon" type="img/png" href="html_dasar/gambar/icon.png" sizes="16x16" />
 </head>
 <body>
 <h1>Heading Dengan H1</h1>
